src/test/ui/object-safety/object-safety-generics.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-generics.rs:14:1
   |
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: method `bar` has generic type parameters

error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-generics.rs:19:1
   |
LL | fn make_bar_explicit<T:Bar>(t: &T) -> &dyn Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: method `bar` has generic type parameters

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
